<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="setting_account_title">Account</string>
    <string name="setting_general_title">General</string>
    <string name="setting_plugin_title">Plugin</string>
    <string name="setting_task_title">Task</string>
    <string name="setting_about_title">About</string>
    <string name="setting_logdebug_title">Output debug log</string>
    <string name="setting_showwarning_title">Show warning message</string>
    <string name="setting_notifytraffic_title">Mobile traffic notification</string>
    <string name="setting_autofetch_title">Auto download in mobile network</string>
    <string name="setting_orientationsensor_title">Enable orientation sensor</string>
    <string name="setting_plugin_builtin">built-in</string>
    <string name="setting_account_add_label">Add account</string>
    <string name="accountinfo_details_brief_title">Story</string>
    <string name="accountinfo_details_basic_title">Basic Information</string>
    <string name="sectioninfo_details_library_title">Library</string>
    <string name="sectioninfo_details_file_title">File</string>
    <string name="sectioninfo_details_folder_title">Folder</string>
    <string name="sectioninfo_details_image_title">Photo</string>
    <string name="sectioninfo_details_audio_title">Music</string>
    <string name="sectioninfo_details_video_title">Movie</string>
    <string name="sectioninfo_details_media_title">Media</string>
    <string name="sectioninfo_details_media_infos_title">Media</string>
    <string name="sectioninfo_details_media_tags_title">Media Tags</string>
    <string name="sectioninfo_details_metadata_infos_title">Details</string>
    <string name="sectioninfo_details_metadata_tags_title">File Tags</string>
    <string name="label_action_upload">Upload</string>
    <string name="label_action_download">Download</string>
    <string name="label_action_create">Create</string>
    <string name="label_action_scan">Photo</string>
    <string name="label_action_share">Share</string>
    <string name="label_action_refresh">Refresh</string>
    <string name="label_action_browser">Browser</string>
    <string name="label_action_viewtype">View by ...</string>
    <string name="label_action_viewtype_large">Large mode</string>
    <string name="label_action_viewtype_list">List mode</string>
    <string name="label_action_viewtype_small">Thumbnail grid</string>
    <string name="label_action_search">Search</string>
    <string name="label_action_search_hints">Search keywords</string>
    <string name="label_action_select">Select</string>
    <string name="label_action_delete">Delete</string>
    <string name="label_action_move">Move</string>
    <string name="label_action_addalbum">Create album</string>
    <string name="label_action_tasks">Tasks</string>
    <string name="label_action_settings">Settings</string>
    <string name="label_action_open">Open</string>
    <string name="label_action_about">About</string>
    <string name="label_action_property">Property</string>
    <string name="label_action_media">Media</string>
    <string name="label_action_metadata">Details</string>
    <string name="label_action_logout">Sign out</string>
    <string name="label_action_notify">Notification</string>
    <string name="label_action_view_list">View as List</string>
    <string name="label_action_view_grid">View as Grid</string>
    <string name="label_action_filterby">Filter by ...</string>
    <string name="label_action_sortby">Sort by ...</string>
    <string name="label_sortby_name_asc">Name (A-Z)</string>
    <string name="label_sortby_name_desc">Name (Z-A)</string>
    <string name="label_sortby_modified_asc">Date updated (Oldest - Newest)</string>
    <string name="label_sortby_modified_desc">Date updated (Newest - Oldest)</string>
    <string name="label_sortby_size_asc">Size (Smallest - Largest)</string>
    <string name="label_sortby_size_desc">Size (Largest - Smallest)</string>
    <string name="label_sortby_type_asc">Type (A-Z)</string>
    <string name="label_sortby_type_desc">Type (Z-A)</string>
    <string name="label_filterby_all">All files</string>
    <string name="label_filterby_image">Only pictures</string>
    <string name="label_filterby_audio">Only songs</string>
    <string name="label_filterby_video">Only movies</string>
    <string name="label_operation_move">Move</string>
    <string name="label_operation_delete">Delete</string>
    <string name="label_operation_rename">Rename</string>
    <string name="label_operation_modify">Modify</string>
    <string name="label_operation_share">Share</string>
    <string name="label_operation_details">Details</string>
    <string name="label_operation_open">Open with</string>
    <string name="label_operation_select">Select</string>
    <string name="label_operation_download">Download</string>
    <string name="label_local_albums">Local albums</string>
    <string name="label_download_albums">Download picture</string>
    <string name="label_album_info">%1$d photos</string>
    <string name="label_tagselect_title">Popular Tags</string>
    <string name="label_tagselect_all">(all)</string>
    <string name="label_photo_details">Details</string>
    <string name="label_photo_exifs">Exifs</string>
    <string name="label_photo_comments">Comments</string>
    <string name="label_user_photos">Photos</string>
    <string name="label_user_likes">Likes</string>
    <string name="label_user_follows">Follows</string>
    <string name="label_user_comments">Comments</string>
    <string name="label_action_comment">Comments</string>
    <string name="label_action_album">Albums</string>
    <string name="label_action_group">Groups</string>
    <string name="label_action_favorite">Favorites</string>
    <string name="label_action_contact">Contacts</string>
    <string name="label_action_blog">Blogs</string>
    <string name="label_action_member">Members</string>
    <string name="label_action_topic">Topics</string>
    <string name="label_action_photo">Photos</string>
    <string name="label_group_name">Group</string>
    <string name="label_group_members">Members</string>
    <string name="label_group_topics">Topics</string>
    <string name="label_group_follows">Follows</string>
    <string name="label_group_photos">Photos</string>
    <string name="label_title_album">Album:</string>
    <string name="label_title_groupprofile">Group profile</string>
    <string name="label_title_groupdesc">Group description</string>
    <string name="label_title_grouprule">Group rules</string>
    <string name="label_host_domain">Domain</string>
    <string name="label_host_domain_hint">(optional)</string>
    <string name="label_host_address">Address</string>
    <string name="label_host_address_hint">192.168.x.x:80</string>
    <string name="details_source">Source</string>
    <string name="details_location">Location</string>
    <string name="details_filepath">File path</string>
    <string name="details_filename">File name</string>
    <string name="details_contenttype">File type</string>
    <string name="details_filesize">File size</string>
    <string name="details_lastmodified">Modified</string>
    <string name="details_updated">Last updated</string>
    <string name="details_posted">Posted</string>
    <string name="details_owner">Owner</string>
    <string name="details_checksum">Checksum</string>
    <string name="details_date">Date</string>
    <string name="details_taken">Taken</string>
    <string name="details_title">Title</string>
    <string name="details_summary">Summary</string>
    <string name="details_author">Author</string>
    <string name="details_nickname">Nickname</string>
    <string name="details_email">Email</string>
    <string name="details_credit">Media credit</string>
    <string name="details_description">Description</string>
    <string name="details_imagesize">Image size</string>
    <string name="details_albumtitle">Album title</string>
    <string name="details_albumdesc">Album description</string>
    <string name="details_copyright">Copyright</string>
    <string name="details_realname">Realname</string>
    <string name="details_accountname">Account</string>
    <string name="details_user_location">Location</string>
    <string name="details_createdate">Created</string>
    <string name="details_groupname">Group name</string>
    <string name="details_group_summary">Total %1$d members</string>
    <string name="details_group_blast">Blast</string>
    <string name="details_group_blastdate">Blast date</string>
    <string name="details_brief">Tagline</string>
    <string name="details_introduction">Introduction</string>
    <string name="details_tags">Tags</string>
    <string name="details_hostname">Host</string>
    <string name="exifs_flash">Flash</string>
    <string name="exifs_imagewidth">Width</string>
    <string name="exifs_imagelength">Height</string>
    <string name="exifs_make">Make</string>
    <string name="exifs_model">Model</string>
    <string name="exifs_aperture">Aperture</string>
    <string name="exifs_iso">ISO</string>
    <string name="exifs_whitebalance">White Balance</string>
    <string name="exifs_exposuretime">Exposure Time</string>
    <string name="exifs_focallength">Focal Length</string>
    <string name="exifs_datetime">Taken</string>
	<string name="folder_camera">Camera</string>
    <string name="folder_download">Download</string>
    <string name="folder_edited_online_photos">Edited Online Photos</string>
    <string name="folder_imported">Imported</string>
    <string name="folder_screenshot">Screenshot</string>
    <string name="select_upload_title">Upload File</string>
    <string name="select_store_folder_title">Select folder to save file</string>
    <string name="select_create_title">Create Item</string>
    <string name="select_create_textfile_title">Create text file</string>
    <string name="select_create_folder_title">Create folder</string>
    <string name="select_create_library_title">Create library</string>
    <string name="select_create_textfile_subtitle">create new text file in folder %1$s and type something.</string>
    <string name="select_create_folder_subtitle">create new subdirectory in folder %1$s.</string>
    <string name="select_create_library_subtitle">create new library for account %1$s.</string>
    <string name="select_photo_title">Upload Photo</string>
    <string name="select_photo_pick_category">Photo</string>
    <string name="select_photo_capture_category">Camera</string>
    <string name="dialog_filterby_title">Filter by</string>
    <string name="dialog_sortby_title">Sort by</string>
    <string name="dialog_warning_title">Warning</string>
    <string name="dialog_hide_warning">Hide Warning</string>
    <string name="dialog_show_trace">Show Details</string>
    <string name="dialog_copied_trace_message">Message details has copied to clipboard.</string>
    <string name="dialog_auto_fetch_message">"Auto download large thumbnails in mobile network?"</string>
    <string name="dialog_downloadalbum_scanning_message">"Scanning download photo..."</string>
    <string name="dialog_localalbum_scanning_message">"Scanning local album..."</string>
    <string name="dialog_exit_button">Exit program</string>
    <string name="dialog_close_button">Close</string>
    <string name="label_album_name">Album name</string>
    <string name="label_album_name_hint">input name</string>
    <string name="label_album_location">Location</string>
    <string name="label_album_location_hint">taken location</string>
    <string name="label_album_keywords">Keywords</string>
    <string name="label_album_keywords_hint">search keywords split by space</string>
    <string name="label_album_summary">Summary</string>
    <string name="label_album_access">Access</string>
    <string name="label_album_access_public">Public</string>
    <string name="label_album_access_private">Private</string>
</resources>