<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/section_action_share"
        android:title="@string/label_action_share" 
        android:icon="@drawable/ic_menu_share_holo_light"
        android:showAsAction="always"
        android:orderInCategory="200"
        />
    
    <item
        android:id="@+id/section_action_download"
        android:title="@string/label_action_download" 
        android:icon="@drawable/ic_menu_download_holo_light"
        android:showAsAction="always"
        android:orderInCategory="300"
        />
    
    <item
        android:id="@+id/section_action_delete"
        android:title="@string/label_action_delete" 
        android:icon="@drawable/ic_menu_delete_holo_light"
        android:showAsAction="never"
        android:orderInCategory="400"
        />
    
    <item
        android:id="@+id/section_action_move"
        android:title="@string/label_action_move" 
        android:icon="@drawable/ic_menu_move_holo_light"
        android:showAsAction="never"
        android:orderInCategory="500"
        />
    
</menu>