<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|top"
    android:orientation="vertical"
    >
    
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|top"
	    android:orientation="horizontal"
	    >
	    
	    <TextView android:id="@+id/album_input_name" 
	    	android:layout_width="100dp" 
	    	android:layout_height="40dp" 
	    	android:layout_marginRight="10dp"
	    	android:layout_gravity="right|center_vertical"
	    	android:gravity="right|center_vertical"
	    	android:text="@string/label_album_name"
	    	android:textSize="17sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:ellipsize="marquee" 
	    	android:singleLine="true" 
	    	/>
        
        <EditText android:id="@+id/album_input_name_field" 
            android:layout_width="200dp" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="10dp"
            android:layout_gravity="left|center_vertical" 
            android:hint="@string/label_album_name_hint" 
            android:inputType="text"
            android:imeOptions="actionNext" 
	    	android:textSize="16sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:lines="1"
            />
        
	</LinearLayout>
  	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|top"
	    android:orientation="horizontal"
	    >
	    
	    <TextView android:id="@+id/album_input_location" 
	    	android:layout_width="100dp" 
	    	android:layout_height="40dp" 
	    	android:layout_marginRight="10dp"
	    	android:layout_gravity="right|center_vertical"
	    	android:gravity="right|center_vertical"
	    	android:text="@string/label_album_location"
	    	android:textSize="17sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:ellipsize="marquee" 
	    	android:singleLine="true" 
	    	/>
        
        <EditText android:id="@+id/album_input_location_field" 
            android:layout_width="200dp" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="10dp"
            android:layout_gravity="left|center_vertical" 
            android:hint="@string/label_album_location_hint" 
            android:inputType="text"
            android:imeOptions="actionNext" 
	    	android:textSize="16sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:lines="1"
            />
        
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|top"
	    android:orientation="horizontal"
	    >
	    
	    <TextView android:id="@+id/album_input_keywords" 
	    	android:layout_width="100dp" 
	    	android:layout_height="40dp" 
	    	android:layout_marginRight="10dp"
	    	android:layout_gravity="right|center_vertical"
	    	android:gravity="right|center_vertical"
	    	android:text="@string/label_album_keywords"
	    	android:textSize="17sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:ellipsize="marquee" 
	    	android:singleLine="true" 
	    	/>
        
        <EditText android:id="@+id/album_input_keywords_field" 
            android:layout_width="200dp" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="10dp"
            android:layout_gravity="left|center_vertical" 
            android:hint="@string/label_album_keywords_hint" 
            android:inputType="text"
            android:imeOptions="actionNext" 
	    	android:textSize="16sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:lines="1"
            />
        
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|top"
	    android:orientation="horizontal"
	    >
	    
	    <TextView android:id="@+id/album_input_summary" 
	    	android:layout_width="100dp" 
	    	android:layout_height="40dp" 
	    	android:layout_marginRight="10dp"
	    	android:layout_gravity="right|top"
	    	android:gravity="right|top"
	    	android:text="@string/label_album_summary"
	    	android:textSize="17sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:ellipsize="marquee" 
	    	android:singleLine="true" 
	    	/>
        
        <EditText android:id="@+id/album_input_summary_field" 
            android:layout_width="200dp" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="10dp"
            android:layout_gravity="left|center_vertical" 
            android:gravity="left|top"
            android:inputType="textMultiLine"
	    	android:textSize="16sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:minLines="3"
	    	android:maxLines="5"
            />
        
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|top"
	    android:orientation="horizontal"
	    >
	    
	    <TextView android:id="@+id/album_input_access" 
	    	android:layout_width="100dp" 
	    	android:layout_height="40dp" 
	    	android:layout_marginRight="10dp"
	    	android:layout_gravity="right|center_vertical"
	    	android:gravity="right|center_vertical"
	    	android:text="@string/label_album_access"
	    	android:textSize="17sp" 
	    	android:textStyle="normal" 
	    	android:textColor="#ff000000" 
	    	android:ellipsize="marquee" 
	    	android:singleLine="true" 
	    	/>
        
		<RadioGroup android:id="@+id/album_input_access_field" 
		    android:layout_width="200dp"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dp"
		    android:layout_gravity="left|center_vertical"
		    android:orientation="horizontal"
		    >
		    
	        <RadioButton android:id="@+id/album_input_access_public" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:layout_gravity="left|center_vertical" 
	            android:text="@string/label_album_access_public"
		    	android:textSize="16sp" 
		    	android:textStyle="normal" 
		    	android:textColor="#ff000000" 
		    	android:checked="true"
	            />
		    
	        <RadioButton android:id="@+id/album_input_access_private" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:layout_gravity="left|center_vertical" 
	            android:text="@string/label_album_access_private"
		    	android:textSize="16sp" 
		    	android:textStyle="normal" 
		    	android:textColor="#ff000000" 
		    	android:checked="false"
	            />
	        
        </RadioGroup>
        
	</LinearLayout>
	
</LinearLayout>