<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|top"
    android:orientation="vertical"
    >
    
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|top"
	    android:orientation="horizontal"
	    >
	    
	    <TextView android:id="@+id/host_input_domain" 
	    	android:layout_width="@dimen/host_input_name_width" 
	    	android:layout_height="@dimen/host_input_name_height" 
	    	android:layout_marginRight="@dimen/host_input_name_marginright"
	    	android:layout_gravity="right|center_vertical"
	    	android:gravity="right|center_vertical"
	    	android:text="@string/label_host_domain"
	    	android:textSize="@dimen/host_input_name_textsize" 
	    	android:textStyle="normal" 
	    	android:textColor="@color/host_input_name_color" 
	    	android:ellipsize="marquee" 
	    	android:singleLine="true" 
	    	/>
        
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="left|center_vertical"
		    android:layout_marginRight="@dimen/host_input_edit_marginright"
		    android:orientation="vertical"
		    >
		    
	        <EditText android:id="@+id/host_input_domain_field" 
	            android:layout_width="@dimen/host_input_edit_width" 
	            android:layout_height="wrap_content" 
	            android:layout_gravity="left|center_vertical" 
	            android:hint="@string/label_host_domain_hint" 
	            android:inputType="textUri"
	            android:imeOptions="actionNext" 
		    	android:textSize="@dimen/host_input_edit_textsize" 
		    	android:textStyle="normal" 
		    	android:textColor="@color/host_input_edit_color" 
		    	android:lines="1"
	            />
	        
		    <TextView android:id="@+id/host_input_domain_prompt" 
		    	android:layout_width="@dimen/host_input_edit_width" 
		    	android:layout_height="wrap_content" 
		    	android:layout_marginLeft="@dimen/host_input_prompt_marginleft"
		    	android:layout_marginRight="@dimen/host_input_prompt_marginright"
		    	android:layout_gravity="left|center_vertical"
		    	android:gravity="left|center_vertical"
		    	android:textSize="@dimen/host_input_prompt_textsize" 
		    	android:textStyle="normal" 
		    	android:textColor="@color/host_input_prompt_color" 
		    	android:singleLine="false" 
		    	android:visibility="gone"
		    	/>
        </LinearLayout>
	</LinearLayout>
  	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal|top"
	    android:orientation="horizontal"
	    >
	    
	    <TextView android:id="@+id/host_input_address" 
	    	android:layout_width="@dimen/host_input_name_width" 
	    	android:layout_height="@dimen/host_input_name_height" 
	    	android:layout_marginRight="@dimen/host_input_name_marginright"
	    	android:layout_gravity="right|center_vertical"
	    	android:gravity="right|center_vertical"
	    	android:text="@string/label_host_address"
	    	android:textSize="@dimen/host_input_name_textsize" 
	    	android:textStyle="normal" 
	    	android:textColor="@color/host_input_name_color" 
	    	android:ellipsize="marquee" 
	    	android:singleLine="true" 
	    	/>
        
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="left|center_vertical"
		    android:layout_marginRight="@dimen/host_input_edit_marginright"
		    android:orientation="vertical"
		    >
	    
	        <EditText android:id="@+id/host_input_address_field" 
	            android:layout_width="@dimen/host_input_edit_width" 
	            android:layout_height="wrap_content" 
	            android:layout_gravity="left|center_vertical" 
	            android:hint="@string/label_host_address_hint" 
	            android:inputType="textUri"
	            android:imeOptions="actionDone" 
		    	android:textSize="@dimen/host_input_edit_textsize" 
		    	android:textStyle="normal" 
		    	android:textColor="@color/host_input_edit_color" 
		    	android:lines="1"
	            />
        
		    <TextView android:id="@+id/host_input_address_prompt" 
		    	android:layout_width="@dimen/host_input_edit_width" 
		    	android:layout_height="wrap_content" 
		    	android:layout_marginLeft="@dimen/host_input_prompt_marginleft"
		    	android:layout_marginRight="@dimen/host_input_prompt_marginright"
		    	android:layout_gravity="left|center_vertical"
		    	android:gravity="left|center_vertical"
		    	android:textSize="@dimen/host_input_prompt_textsize" 
		    	android:textStyle="normal" 
		    	android:textColor="@color/host_input_prompt_color" 
		    	android:singleLine="false" 
		    	android:visibility="gone"
		    	/>
        </LinearLayout>
	</LinearLayout>
	
</LinearLayout>